--- a/referral.html
+++ b/referral.html
@@ -1,34 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Запросити друзів</title>
-  <!-- Підключаємо Telegram Web App JS SDK -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Пригласить друзей</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background: #121212;
+      color: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+    .invite-btn {
+      background: #007bff;
+      color: white;
+      font-size: 18px;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.2s;
+      width: 100%;
+      max-width: 300px;
+    }
+    .invite-btn:active {
+      background: #0056b3;
+    }
+    #message {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #32cd32;
+    }
+  </style>
   <script src="https://telegram.org/js/telegram-webapp.js"></script>
   <script>
     function shareReferral() {
-      // Зчитуємо реферальний код з параметрів URL
       const urlParams = new URLSearchParams(window.location.search);
       const code = urlParams.get("code") || "YOUR_REFERRAL_CODE";
       const referralLink = `https://t.me/Alcaponespeak_bot?start=${code}`;
       
-      // Викликаємо shareData для відкриття діалогу поширення
       Telegram.WebApp.shareData({
-        text: 'Запрошую тебе приєднатися: ' + referralLink
+        text: 'Присоединяйся: ' + referralLink
       }).then(() => {
-        document.getElementById("message").innerText = "Реферальне посилання надіслано!";
+        document.getElementById("message").innerText = "Реферальная ссылка отправлена!";
       }).catch((err) => {
-        document.getElementById("message").innerText = "Помилка: " + err;
+        document.getElementById("message").innerText = "Ошибка: " + err;
       });
     }
   </script>
 </head>
-<body style="text-align: center; padding: 30px;">
-  <h1>Запросити друзів</h1>
-  <!-- Велика кнопка для поширення -->
-  <button style="font-size: 18px; padding: 15px 30px;" onclick="shareReferral()">
-    Натисни, щоб запросити друзів
-  </button>
+<body>
+  <h1>Пригласить друзей</h1>
+  <button class="invite-btn" onclick="shareReferral()">Нажми, чтобы пригласить друзей</button>
   <p id="message"></p>
 </body>
 </html>
